[REFACTOR] adding test for controller using new feat, based on module 8